Fixed inline spacing for ratings

--- a/src/home/style.css
+++ b/src/home/style.css
@@ -166,7 +166,7 @@
 }
 
 .rating-grid {
-    margin-inline: 10%;
+    padding-inline: 10%;
     display: flex;
     height: 100%;
     width: max-content;
